tests/whiley/valid/test_50.wyal
assert "assertion failed":
    forall(bool x, bool y):
        if:
            x == true
            y == false
            (x && x) == true
        then:
            (x && y) == false


