tests/whiley/invalid/test_49.wyal
function m(int x, int y) -> (bool $)

assert "assertion failed":
    if:
        true
    then:
        m(10, 20)


